# cpll

./: .gitignore  CMakeLists.txt  README.md
include/: ast_parser.h  bst_node.hpp  cnf.h  cnf.hpp  cnf_utils.hpp  grammar.h  parser.h  pll_lexer.h  token.hpp  token_stream.h  utils.hpp
src/: cnf.cpp  grammar.cpp  parser.cpp  pll_lexer.cpp  token_stream.cpp
test/: formula_test.cpp  main.cpp
test_ex/: test_cnf.cpp
